--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,10 @@ android {
 }
 
 dependencies {
-
+    //Import Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.1'
+    //
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
